create test to swipeItem_deleteDb

--- a/app/src/main/res/layout/fragment_shoping.xml
+++ b/app/src/main/res/layout/fragment_shoping.xml
@@ -14,6 +14,7 @@
             android:id="@+id/rvShoppingItems"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tvShoppingItemPrice"
             app:layout_constraintLeft_toLeftOf="parent"
